{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 524,
  "lineage": "dfac236d-22a4-700d-5c39-01925a5d673f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0489b1f351e8ae5c1",
            "domain": "vpc",
            "id": "eipalloc-0489b1f351e8ae5c1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-112-248.compute-1.amazonaws.com",
            "public_ip": "3.230.112.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nwg1"
            },
            "tags_all": {
              "Name": "nwg1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088a9b42acdda9927",
            "domain": "vpc",
            "id": "eipalloc-088a9b42acdda9927",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-55-159-163.compute-1.amazonaws.com",
            "public_ip": "52.55.159.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nwg2"
            },
            "tags_all": {
              "Name": "nwg2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:internet-gateway/igw-0ab0d3340361c0755",
            "id": "igw-0ab0d3340361c0755",
            "owner_id": "207650910957",
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-igw",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-igw",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "dependencies": [
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0489b1f351e8ae5c1",
            "association_id": "eipassoc-0a589462ac695982e",
            "connectivity_type": "public",
            "id": "nat-073bfb8c5699774a1",
            "network_interface_id": "eni-00e40a43566e0e3ca",
            "private_ip": "192.168.1.22",
            "public_ip": "3.230.112.248",
            "subnet_id": "subnet-061638fba823d4262",
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-ngwa",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-ngwa",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_subnet.web1a",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088a9b42acdda9927",
            "association_id": "eipassoc-00165a92def00932d",
            "connectivity_type": "public",
            "id": "nat-0b14c326186942dbe",
            "network_interface_id": "eni-0fb2c8cdae78d1d66",
            "private_ip": "192.168.2.124",
            "public_ip": "52.55.159.163",
            "subnet_id": "subnet-09a4b1d1c9427d690",
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-ngwb",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-ngwb",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_subnet.web1b",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtapp1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:route-table/rtb-05d8adbda02b0e742",
            "id": "rtb-05d8adbda02b0e742",
            "owner_id": "207650910957",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-073bfb8c5699774a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-rtprivate1a",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-rtprivate1a",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.ngw1",
            "aws_subnet.web1a",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtapp1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:route-table/rtb-0fd9fde1281e22fe4",
            "id": "rtb-0fd9fde1281e22fe4",
            "owner_id": "207650910957",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b14c326186942dbe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-rtprivate1b",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-rtprivate1b",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_nat_gateway.ngw2",
            "aws_subnet.web1b",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtdb1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:route-table/rtb-0b73b75838d161084",
            "id": "rtb-0b73b75838d161084",
            "owner_id": "207650910957",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-073bfb8c5699774a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-rtdb1a",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-rtdb1a",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.ngw1",
            "aws_subnet.web1a",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtdb1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:route-table/rtb-09b8696b9344b0c4b",
            "id": "rtb-09b8696b9344b0c4b",
            "owner_id": "207650910957",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b14c326186942dbe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-rtdb1b",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-rtdb1b",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_nat_gateway.ngw2",
            "aws_subnet.web1b",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:route-table/rtb-0a3e6f76206d4ce75",
            "id": "rtb-0a3e6f76206d4ce75",
            "owner_id": "207650910957",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab0d3340361c0755",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-rtpublic",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-rtpublic",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsub1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5c45e4956382c42",
            "route_table_id": "rtb-0a3e6f76206d4ce75",
            "subnet_id": "subnet-061638fba823d4262"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtpub",
            "aws_subnet.web1a",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsub1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0565823be21e65db2",
            "route_table_id": "rtb-0a3e6f76206d4ce75",
            "subnet_id": "subnet-09a4b1d1c9427d690"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtpub",
            "aws_subnet.web1b",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsubapp1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067cb0fe229a1134c",
            "route_table_id": "rtb-05d8adbda02b0e742",
            "subnet_id": "subnet-02d5b89e51a63c2a8"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.ngw1",
            "aws_route_table.rtapp1a",
            "aws_subnet.app1a",
            "aws_subnet.web1a",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsubapp1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b821d3dc41f84f4",
            "route_table_id": "rtb-0fd9fde1281e22fe4",
            "subnet_id": "subnet-0211df45df0d2baa9"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_nat_gateway.ngw2",
            "aws_route_table.rtapp1b",
            "aws_subnet.app1b",
            "aws_subnet.web1b",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsubdb1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029e984dcdda3b322",
            "route_table_id": "rtb-0b73b75838d161084",
            "subnet_id": "subnet-09e84af106919b6a1"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.ngw1",
            "aws_route_table.rtdb1a",
            "aws_subnet.db1a",
            "aws_subnet.web1a",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsubdb1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f845482288804f08",
            "route_table_id": "rtb-09b8696b9344b0c4b",
            "subnet_id": "subnet-058d45d5831b11437"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_nat_gateway.ngw2",
            "aws_route_table.rtdb1b",
            "aws_subnet.db1b",
            "aws_subnet.web1b",
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:subnet/subnet-02d5b89e51a63c2a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d5b89e51a63c2a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207650910957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetapp1a",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetapp1a",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "dependencies": [
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:subnet/subnet-0211df45df0d2baa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0211df45df0d2baa9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207650910957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetapp1b",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetapp1b",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "dependencies": [
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:subnet/subnet-09e84af106919b6a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e84af106919b6a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207650910957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetdb1a",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetdb1a",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "dependencies": [
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:subnet/subnet-058d45d5831b11437",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058d45d5831b11437",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207650910957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetdb1b",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetdb1b",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "dependencies": [
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:subnet/subnet-061638fba823d4262",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061638fba823d4262",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "207650910957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetweb1a",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetweb1a",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "dependencies": [
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:subnet/subnet-09a4b1d1c9427d690",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a4b1d1c9427d690",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "207650910957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetweb1b",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-subnetweb1b",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "vpc_id": "vpc-0a87d6ece5ca9e669"
          },
          "dependencies": [
            "aws_vpc.vpcproducts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcproducts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207650910957:vpc/vpc-0a87d6ece5ca9e669",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-073143857fdb4565d",
            "default_route_table_id": "rtb-0923ee891b3d2eacb",
            "default_security_group_id": "sg-0f99614d00d025c16",
            "dhcp_options_id": "dopt-03ec4ddd029aab80f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a87d6ece5ca9e669",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0923ee891b3d2eacb",
            "owner_id": "207650910957",
            "tags": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-vpc",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetID": "2560",
              "AssetName": "Insfrastructure",
              "CreateBy": "Terraform",
              "Environment": "dev",
              "Name": "2560-dev-alpha-vpc",
              "Project": "alpha",
              "Teams": "DEL",
              "cloudProvider": "aws"
            }
          }
        }
      ]
    }
  ]
}